<resources>
    <string name="app_name">SafeWord</string>
    <string name="start_listening">Activate SafeWord Listening</string>
    <string name="manage_contacts">Manage Contacts</string>
    <string name="permission_denied">All permissions must be granted</string>
    <string name="service_active">SafeWord is now listening...</string>
    <string name="call_emergency">Call Emergency</string>

    <!-- For activity_auth.xml -->
    <string name="hint_email">Enter your email</string>
    <string name="hint_name">Enter your name</string>
    <string name="hint_password">Enter your password</string>
    <string name="action_sign_in">Sign In</string>
    <string name="toggle_to_sign_up">Switch to Sign Up</string>
    <string name="toggle_to_sign_in">Switch to Sign In</string>

    <!-- For activity_contacts.xml -->
    <string name="hint_friend_email">Friends Email</string>
    <string name="add_friend">Add Friend</string>

    <!-- For activity_main.xml -->
    <string name="label_listening">Listening...</string>
    <string name="switch_on">On</string>
    <string name="switch_off">Off</string>
    <string name="manage_safe_words">Manage Safe Words</string>

    <!-- For activity_safe_word_setup.xml -->
    <string name="hint_safe_word">Enter a safe word</string>
    <string name="add_safe_word">Add Safe Word</string>

    <!-- For bottom_nav_menu.xml -->
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>

</resources>
